--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "main": "./index",
   "author": "jasmaa",
   "license": "Apache-2.0",
-  "dependencies": {}
+  "dependencies": {},
+  "bin": "./index.js"
 }
