test: Add coverage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "@vitest/coverage-v8": "2.1.6",
     "memfs": "^4.14.0",
     "mock-require": "^3.0.3",
     "vitest": "^2.1.6"
